# sfml-blek-clone

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp
src/entities/: CMakeLists.txt  CircleCollider.cpp  CircleCollider.hpp  LineEntity.cpp  LineEntity.hpp  ObstacleEntity.cpp  ObstacleEntity.hpp  ScoringEntity.cpp  ScoringEntity.hpp
src/game/: CMakeLists.txt  Game.cpp  Game.hpp  IScene.hpp
src/scenes/: CMakeLists.txt  InputPosition.hpp  Scenes.hpp  WormyScene.cpp  WormyScene.hpp
